Fix: line breaks in index. Add: iPad landscape "intro" and "about" adaptive layout

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -22,6 +22,10 @@ section {
     @media ($m-s) {
         padding: 60px 40px 60px;
     }
+
+    @media ($m-mm) {
+        padding: 60px 60px 60px;
+      }
 }
 
 img {
