--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -5,26 +5,50 @@
 
   background-color: $c-mint;
 
+  @media ($m-mm) {
+    display: grid;
+    grid-template-columns: 1fr 464px;
+    grid-template-areas: "img text";
+    padding-left: 0;
+  }
+
   &__inner {
     display: flex;
     flex-direction: column;
     z-index: 1;
+    grid-area: text;
+
+    @media ($m-mm) {
+      display: flex;
+      justify-content: center;
+    }
   }
 
   &__media {
+    z-index: 1;
+
     width: 263px;
     align-self: center;
-
     margin-bottom: 20px;
-    z-index: 1;
+
+    grid-area: img;
 
     & > img {
       filter: drop-shadow(0px 0px 140.155px rgba(141, 166, 172, 0.5));
+
+      @media ($m-mm) {
+        margin-left: -30px;
+      }
     }
 
     @media ($m-s) {
       width: 600px;
       height: auto;
+    }
+
+    @media ($m-mm) {
+      width: 500px;
+      margin-bottom: 0;
     }
   }
 
