--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -17,6 +17,15 @@ header {
     padding: 0 40px;
     margin-bottom: 0;
   }
+
+  @media ($m-mm) {
+    display: flex;
+    align-items: center;
+    
+    height: 100px;
+    padding: 0 60px;
+    margin-bottom: 0;
+  }
 }
 
 .header {
