--- a/src/scss/text.scss
+++ b/src/scss/text.scss
@@ -2,7 +2,7 @@
   margin-bottom: 20px;
 
   @media ($m-s) {
-    margin-bottom: 0;
+    margin-bottom: 40px;
   }
 
   &--big-mb {
@@ -24,10 +24,6 @@
 
     color: $c-text-main;
     mix-blend-mode: normal;
-
-    & > br {
-      display: none;
-    }
 
     @media ($m-s) {
       margin-bottom: 25px;
